# nusystematics

./: .gitignore  CMakeLists.txt  README.md  ValenciaInterp.ToolConfig.fcl
cmake/Modules/: CheckDialValidity.cmake
cmake/Templates/: nusystematicsConfig.cmake.in  setup.nusystematics.sh.in
config/: PlotConfig.example.fcl
data/: CMakeLists.txt
doc/: CLI_TOOLS.md
fcl/: BeRPAWeight.ToolConfig.fcl  CCQECRPA.ToolConfig.fcl  CCQETemplateReweight_SF.ToolConfig.fcl  CMakeLists.txt  DIRT2.EmissEngine.Config.fcl  DIRT2_Emiss.ToolConfig.fcl  EbLepMomShift.ToolConfig.fcl  FSILikeEAvailSmearing.ToolConfig.fcl  FSIMultTemplateRW.fcl  FSIReweight.ToolConfig.fcl  FSITemplateRW.fcl  MINERvAE2p2h.ToolConfig.fcl  MINERvAq0q3Weighting.ToolConfig.fcl  MiscInteractionSysts.ToolConfig.fcl  NOvAStyleNonResPionNorm.ToolConfig.fcl  QEInterference.ToolConfig.fcl  SuSAv2_MEC_reweight.ToolConfig.fcl  ValenciaMECq0q3InterpWeighting.PH.fcl  ValenciaMECq0q3InterpWeighting.ToolConfig.fcl  WSReweight.Config.fcl  WSReweight.ToolConfig.fcl
fcl/.ipynb_checkpoints/: FSIMultTemplateRW-checkpoint.fcl  FSITemplateRW-checkpoint.fcl
fcl/CCQETemplateReweight/: CCQETemplateReweight_CRPA.ToolConfig.fcl  CCQETemplateReweight_SF.ToolConfig.fcl
fcl/FSITemplateReweight/: FSI_All.ToolConfig.fcl  FSI_G4BC.ToolConfig.fcl  FSI_INCL.ToolConfig.fcl  FSI_hN.ToolConfig.fcl
fcl/FSITemplateReweight/Ebias/: FSI_Ebias_All.ToolConfig.fcl  FSI_Ebias_G4BC.ToolConfig.fcl  FSI_Ebias_INCL.ToolConfig.fcl  FSI_Ebias_hN.ToolConfig.fcl
fcl/FSITemplateReweight/NucleonMultiplicity/: FSI_NuclMult_All.ToolConfig.fcl  FSI_NuclMult_G4BC.ToolConfig.fcl  FSI_NuclMult_INCL.ToolConfig.fcl  FSI_NuclMult_hN.ToolConfig.fcl
fcl/MECq0q3InterpWeighting/: SuSAv2.All.ToolConfig.fcl  SuSAv2ToMartini_MEC_q0binned.ToolConfig.fcl  SuSAv2ToMartini_MEC_reweight.ToolConfig.fcl  SuSAv2ToValenica_MEC_q0binned.ToolConfig.fcl  SuSAv2ToValenica_MEC_reweight.ToolConfig.fcl
fcl/QEInterference/: QEInterference.ToolConfig.fcl
src/nusystematics/app/: CMakeLists.txt  DeclaredDialTestNuSyst.cxx  DumpConfiguredTweaksNuSyst.cxx  DumpDialResponseNuSyst.cxx  GenerateAllDialsConfigNuSyst.cxx  PlotSystVariationsNuSyst.cxx  nusyst
src/nusystematics/interface/: IGENIESystProvider_tool.hh
src/nusystematics/responsecalculators/: CCMECModelReweightCalculator.hh  CCQECRPAReweightCalculator.hh  CCQESFReweightCalculator.hh  CCQETemplateReweightCalculator.hh  CMakeLists.txt  FSIReweightCalculator.hh  FSIReweightCalculatorMult.hh  MECq0q3ResponseCalc.hh  QEInterferenceResponseCalculator.hh  ValenciaMECq0q3ResponseCalc.cc  ValenciaMECq0q3ResponseCalc.hh  WSReweight_calculator.hh
src/nusystematics/responsecalculators/.ipynb_checkpoints/: FSIReweightCalculator-checkpoint.hh  FSIReweightCalculatorMult-checkpoint.hh
src/nusystematics/systproviders/: CCMECModelReweight_tool.cc  CCMECModelReweight_tool.hh  CCQECRPAReweight_tool.cc  CCQECRPAReweight_tool.hh  CCQESFReweight_tool.cc  CCQESFReweight_tool.hh  CCQESFReweight_tool_save.cc  CCQETemplateReweight_tool.cc  CCQETemplateReweight_tool.hh  CMakeLists.txt  FSIReweightMult_tool.cc  FSIReweightMult_tool.hh  FSIReweight_tool.cc  GENIEReWeightEngineConfig.cc  GENIEReWeightParamConfig.cc  GENIEReWeight_tool.cc  MECq0q3InterpWeighting_tool.cc  MECq0q3InterpWeighting_tool.hh  QEInterferenceWeight_tool.cc  QEInterferenceWeight_tool.hh  QEInterference_tool.cc  QEInterference_tool.hh  ResIso_tool.cc  ResIso_tool.hh  ValenciaMECq0q3InterpWeighting_tool.cc  ValenciaMECq0q3InterpWeighting_tool.hh  WSReweight_tool.cc  WSReweight_tool.hh
src/nusystematics/systproviders/.ipynb_checkpoints/: FSIReweightMult_tool-checkpoint.cc  FSIReweight_tool-checkpoint.cc  FSIReweight_tool-checkpoint.hh
src/nusystematics/utility/: CMakeLists.txt  KinVarUtils.hh  channel_classification.hh  genie_metadata.hh  make_instance.hh  response_helper.hh  silence_genie.hh
